# public/swagger.json
@@ -7,6 +7,36 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"SuccessResponse_string_": {
+				"properties": {
+					"code": {
+						"anyOf": [
+							{
+								"type": "string"
+							},
+							{
+								"type": "string",
+								"enum": [
+									""
+								]
+							}
+						]
+					},
+					"message": {
+						"type": "string"
+					},
+					"result": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"code",
+					"message",
+					"result"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Gender": {
 				"enum": [
 					"male",
@@ -16,203 +46,36 @@
 				],
 				"type": "string"
 			},
-			"IUserResponse": {
+			"ICreateUser": {
 				"properties": {
-					"firstName": {
-						"type": "string"
-					},
-					"lastName": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"address": {
-						"type": "string"
-					},
-					"gender": {
-						"$ref": "#/components/schemas/Gender"
-					},
 					"id": {
 						"type": "string"
+					},
+					"firstName": {
+						"type": "string"
+					},
+					"lastName": {
+						"type": "string"
+					},
+					"gender": {
+						"$ref": "#/components/schemas/Gender"
+					},
+					"email": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
 					}
 				},
 				"required": [
 					"firstName",
 					"lastName",
-					"email",
-					"address",
 					"gender",
-					"id"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"GenericResponse": {
-				"properties": {
-					"data": {
-						"$ref": "#/components/schemas/IUserResponse"
-					}
-				},
-				"required": [
-					"data"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"SuccessResponse_GenericResponse_": {
-				"properties": {
-					"code": {
-						"anyOf": [
-							{
-								"type": "string"
-							},
-							{
-								"type": "string",
-								"enum": [
-									""
-								]
-							}
-						]
-					},
-					"message": {
-						"type": "string"
-					},
-					"result": {
-						"$ref": "#/components/schemas/GenericResponse"
-					}
-				},
-				"required": [
-					"code",
-					"message",
-					"result"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"IUser": {
-				"properties": {
-					"firstName": {
-						"type": "string"
-					},
-					"lastName": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"address": {
-						"type": "string"
-					},
-					"gender": {
-						"$ref": "#/components/schemas/Gender"
-					}
-				},
-				"required": [
-					"firstName",
-					"lastName",
 					"email",
-					"address",
-					"gender"
+					"password"
 				],
 				"type": "object",
 				"additionalProperties": false
-			},
-			"SuccessResponse__data-IUserResponse-Array__": {
-				"properties": {
-					"code": {
-						"anyOf": [
-							{
-								"type": "string"
-							},
-							{
-								"type": "string",
-								"enum": [
-									""
-								]
-							}
-						]
-					},
-					"message": {
-						"type": "string"
-					},
-					"result": {
-						"properties": {
-							"data": {
-								"items": {
-									"$ref": "#/components/schemas/IUserResponse"
-								},
-								"type": "array"
-							}
-						},
-						"required": [
-							"data"
-						],
-						"type": "object"
-					}
-				},
-				"required": [
-					"code",
-					"message",
-					"result"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"SuccessResponse_null_": {
-				"properties": {
-					"code": {
-						"anyOf": [
-							{
-								"type": "string"
-							},
-							{
-								"type": "string",
-								"enum": [
-									""
-								]
-							}
-						]
-					},
-					"message": {
-						"type": "string"
-					},
-					"result": {
-						"type": "number",
-						"enum": [
-							null
-						],
-						"nullable": true
-					}
-				},
-				"required": [
-					"code",
-					"message",
-					"result"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Partial_IUser_": {
-				"properties": {
-					"firstName": {
-						"type": "string"
-					},
-					"lastName": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"address": {
-						"type": "string"
-					},
-					"gender": {
-						"$ref": "#/components/schemas/Gender"
-					}
-				},
-				"type": "object",
-				"description": "Make all properties in T optional"
 			}
 		},
 		"securitySchemes": {}
@@ -230,12 +93,12 @@
 			"post": {
 				"operationId": "CreateUser",
 				"responses": {
-					"201": {
-						"description": "OK",
+					"200": {
+						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SuccessResponse_GenericResponse_"
+									"$ref": "#/components/schemas/SuccessResponse_string_"
 								}
 							}
 						}
@@ -248,7 +111,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/IUser"
+								"$ref": "#/components/schemas/ICreateUser"
 							}
 						}
 					}
@@ -262,7 +125,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SuccessResponse__data-IUserResponse-Array__"
+									"$ref": "#/components/schemas/SuccessResponse_string_"
 								}
 							}
 						}
@@ -273,32 +136,6 @@
 			}
 		},
 		"/api/v1/users/{id}": {
-			"get": {
-				"operationId": "GetUser",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/SuccessResponse_GenericResponse_"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			},
 			"delete": {
 				"operationId": "DeleteUser",
 				"responses": {
@@ -307,7 +144,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SuccessResponse_null_"
+									"$ref": "#/components/schemas/SuccessResponse_string_"
 								}
 							}
 						}
@@ -324,42 +161,6 @@
 						}
 					}
 				]
-			},
-			"put": {
-				"operationId": "UpdateUser",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/SuccessResponse_GenericResponse_"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/Partial_IUser_"
-							}
-						}
-					}
-				}
 			}
 		}
 	},
